--- a/css/styles.scss
+++ b/css/styles.scss
@@ -31,3 +31,9 @@ img {
 	max-width: 100%;
 	height: auto;
 }
+
+.nav-item {
+	justify-content: center;
+	align-content: center;
+	align-items: center;
+}
